@@ -1,3 +1,8 @@
+2004-04-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ld-scripts/assert.s: Add a newline.
+	* ld-scripts/data.s: Likewise.
+
 2004-04-08  Alan Modra  <amodra@bigpond.net.au>
 
 	PR 47.
